Fix icon alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,7 @@
     fill: currentColor;
   }
 }
+
+.MuiSvgIcon-root {
+  font-size: 1.25rem !important;
+}
